# depmap-portal

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_durations  CLAUDE.md  LICENSE  README.md  oncref-harmonized-plan.md  srcclr.yml
analysis-pipeline/: Dockerfile  README.md  image-name  jenkins-run-pipeline.sh  predictability_inputs_internal.template  pyproject.toml  run.sh  run_internal_analysis.conseq  run_pipeline.py
analysis-pipeline/pipeline-run-docker/: Dockerfile  conseq-settings  image-name  pyproject.toml
analysis-pipeline/predictability/: daintree_fit.conseq  fit.conseq  model-config.yaml  predictability_inputs.conseq  predictability_inputs_internal.template  preprocess_taiga_ids.py  run_internal_analysis.conseq  sparkles-config
breadbox/: .env.dev  API_Appendix.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  api.yaml  bb  build-docker-image.sh  commands.py  db_load.py  docker-compose.yaml  install_prereqs.sh  known-data-issues.json  mypy.ini  ppyrightconfig.json  pyproject.toml  pyright-ratchet-errors.txt  sql2_proto.py  test_bb_sql.py  testing.ipynb
breadbox-client/: README.md  bump_version_and_publish.py  latest-breadbox-api.json  pyproject.toml
breadbox-client-generator/: README.md  generate.sh  pyproject.toml
breadbox-client/breadbox_client/: __init__.py  types.py
breadbox-client/breadbox_facade/: __init__.py  client.py  exceptions.py
breadbox/alembic/: env.py
breadbox/breadbox/: __init__.py  commands.py  config.py  logging.py  logging_config.py  main.py  startup.py  telemetry.py
breadbox/docs/: architecture.md  breadbox-cms-endpoints.md  coding_standards.md  database_and_storage.md  download_file_support.md  flat-table-proposal.md  pred-proposal.md  terminology.md
breadbox/requirements/: rpy2.version
breadbox/tests/: conftest.py  factories.py  test_startup.py  utils.py
data-prep-pipeline/: Dockerfile  README.md  gsutil-boto-config  image-name  jenkins-run-pipeline-external.sh  jenkins-run-pipeline.sh  pyproject.toml
data-prep-pipeline/conseq_scripts/: config.py  datarelease_taiga_permanames.py
data-prep-pipeline/data_prep_pipeline/: assemble_data_dictionary.py  cngene_log_2_transformation.conseq  common.conseq  config.py  data_prep.py  datarelease_taiga_permanames.py  filter_portal_compounds.conseq  filter_portal_compounds_external.conseq  filter_portal_compounds_internal.conseq  legacy_data.conseq  model_and_model_condition.conseq  predictability.conseq  preprocess_taiga_ids.py  publish.conseq  release_inputs.conseq  release_inputs.template  release_inputs_external.template  release_inputs_internal.template  run_external.conseq  run_internal.conseq  subtype_tree.conseq  update_hgnc_gene.py  update_hgnc_gene_table.conseq  upload_to_taiga.py  utils.py
depmap-compute/: README.md  pyproject.toml
depmap-compute/depmap_compute/: analysis_tasks_interface.py  context.py  models.py  slice.py
packed-cor-tables/: README.md  pyproject.toml
packed-cor-tables/packed_cor_tables/: __init__.py
packed-cor-tables/tests/: test_packed_cor_tables.py
pipeline/: README.md  _run_common.conseq  base_pipeline_runner.py  context-enrichment.conseq  correlation.conseq  create-biomarker-matrix-contexts.conseq  dstat_wrapper.py  exec.conseq  image-name  internal.template  jenkins-run-nonquarterly.sh  jenkins-run-pipeline.sh  make_biomarker_matrix_contexts.py  make_compound_summary_table.conseq  nonquarterly-processed.conseq  oncokb_import.conseq  pipeline_config.py  pipeline_config.yaml  pipeline_runner.py  preprocess_raw_biom_matrix.conseq  preprocess_taiga_ids.py  preprocess_taiga_ids.py.new  process-drug-screens.conseq  proteomics.conseq  publish.conseq  pyproject.toml  readme.md  reformat_repurposing_data.conseq  run.sh  run_all.py  run_pipelines_jenkins.sh  run_xqa.conseq  sanger_proteomics.conseq  sparkles-config  sparkles-config-n1-highmem-4  sparkles-config-n4-standard-4  tda.conseq  tda_table_generator.conseq  validation.conseq  xrefs-common.conseq  (+5 more)
pipeline/analysis-pipeline/: README.md  analysis_pipeline_runner.py  common.conseq  jenkins-run-pipeline.sh  local_run.sh  main.conseq  predictability_inputs_internal.template  publish.conseq  pyproject.toml  run-with-publish.sh  run.sh  run_analysis_pipeline.py  run_external.conseq  run_internal.conseq  run_internal_analysis.conseq  run_pipeline.py
pipeline/build-pipeline-docker-images/: build.sh
pipeline/celligner/: celligner.conseq  test-artifacts.conseq
pipeline/cn_gene/: README.md  transform_cngene_to_log2.py
pipeline/context_explorer/: concat_csvs.py  get_context_analysis.conseq  get_context_analysis.py  get_data_availability.conseq  get_data_availability.py  get_subtype_context_matrix.conseq  get_subtype_tree.conseq  parallelized_get_context_analysis.json
pipeline/cor_analysis/: cor_analysis.conseq  correlation_with_qvalue.py  create_cor_analysis_pairs.py  test2.conseq
pipeline/data-prep-pipeline/: Dockerfile  README.md  cngene_log_2_transformation.conseq  data_prep_pipeline_runner.py  filter_portal_compounds.conseq  image-name  jenkins-run-pipeline-internal.sh  local_run.sh  predictability.conseq  publish.conseq  pyproject.toml  release_inputs_common.template  release_inputs_external.template  release_inputs_internal.template  run_common.conseq  run_data_prep_pipeline.py  run_external.conseq  run_internal.conseq  subtype_tree.conseq  update_hgnc_gene_table.conseq
pipeline/data_page/: get_all_data_availability.conseq  get_all_data_availability.py  test.conseq
pipeline/predictability/: README.md  model-config.yaml  predictability.conseq  test-artifacts.conseq
pipeline/preprocessing-pipeline/: readme.md  (+39 more)
portal-backend/: .importlinter  Dockerfile  PHASE1_PR.md  README.md  all_tests  autoapp.py  build-docker-image.sh  copy-data-from-dstaging.sh  copy-data-from-istaging.sh  copy-data-from-test.sh  copy-data-to-testpred.sh  cp-local-data-to-staging.sh  cp-staging-to-iprod.sh  docker-compose.yaml  flask  git-sha  install_prereqs.sh  mypy.ini  overrides.py  pyproject.toml  pyright-ratchet-errors.txt  setup_env.sh
smiles-to-svg/: README.md  pyproject.toml
(+1598 files in other folders)
