[tool.poetry]
name = "breadbox-client-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "breadbox_client_generator"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
openapi-python-client = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"