[tool.poetry]
name = "breadbox-client"
version = "4.3.5"
description = "A client library for accessing Breadbox"

authors = []

readme = "README.md"
packages = [
    {include = "breadbox_client"},
    {include = "breadbox_facade"},
]
include = ["CHANGELOG.md", "breadbox_client/py.typed", "breadbox_client/**/*"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
pytest = "^7.2.0"
pandas = ">=1.5.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.379"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"

