[tool.poetry]
name = "breadbox-client"
version = "4.3.20"
description = "A client library for accessing Breadbox"

authors = []

readme = "README.md"
packages = [
    {include = "breadbox_facade"},
]

include = [
    { path = "CHANGELOG.md", format = ["sdist", "wheel"] },
    # because the breadbox_client directory is generated, it's listed in .gitignore
    # however, this causes poetry to also ignore these files. There doesn't seem to
    # be a way to override that behavior so explictly tell it to add all the files
    # to the wheel and sdist files
    { path = "breadbox_client/py.typed", format = ["sdist", "wheel"] },
    { path = "breadbox_client/**/*.py", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.9"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
pytest = "^7.2.0"
pandas = ">=1.5.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.379"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"

