[tool.poetry]
name = "breadbox"
version = "4.3.20"
description = "A peristent service that stores and fetches datasets"
authors = ["Jessica Cheng <jcheng@broadinstitute.org>"]
packages = [{include = "breadbox"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.12"
pandas = ">=2.2.0"
h5py = "^3.5.0"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
pre-commit = ">=3.7.0"
scipy = ">=1.11.0"
celery = "^5.4.0"
redis = "^4.5.0"
pytest = "^7.2.0"
httpx = "^0.23.1"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
taigapy = {version = "3.14.0", source = "public-python"}
SQLAlchemy= "^2.0.40"
factory-boy = "^3.3.0"
google-cloud-error-reporting = "^1.10.0"
itsdangerous = "^2.1.2"
pandera = "^0.18.3"
bpython = "^0.24"
pydantic-settings = "^2.2.1"
fastparquet = "^2024.5.0"
sqlitedict="^2.1.0"
google-cloud-storage = "^3.1.0"
packed-cor-tables = {version = "^0.2.0", source = "public-python"}
orjson = "^3.10.16"
pypatch-and-run = {version = "^0.4.1", source = "public-python"}
python-multipart = "^0.0.20" # fastapi 0.115.12 needs this
psutil = "^7.1.0"
#attrs = ">=21.3.0"
#python-dateutil = "^2.8.0"
json-logic = "^0.7.0-alpha"


[tool.poetry.group.dev.dependencies]
pyright-ratchet = {git = "https://github.com/pgm/pyright-ratchet.git", rev = "v0.3.1"}
pyright="^1.1.361"

[tool.poetry.scripts]
bb-cmd = "breadbox.commands:cli"

[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# force change
