[tool.poetry]
name = "data-prep-pipeline"
version = "0.1.0"
description = "Scripts for running the data prep pipeline"
authors = ["Nayeem Aquib <naquib@broadinsitute.org>"]
readme = "README.md"
packages = [{include = "data_prep_pipeline"}]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
click = "^8.1.7"
numpy = "^1.25.1"
taigapy = {version = "3.8.3", source = "gcp-artifact-registry"}


[[tool.poetry.source]]
name = "gcp-artifact-registry"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
