[tool.poetry]
name = "depmap-compute"
version = "0.1.11"
description = "Code related to computations shared between the Depmap Portal and BreadBox"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.15.4,<0.24.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

# Opencensus
opencensus="0.8.0"
opencensus-ext-flask="0.7.6"
opencensus-ext-stackdriver="0.8.0"
opencensus-ext-zipkin="0.2.2"
json-logic = "^0.7.0-alpha"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
