[tool.poetry]
name = "depmap-compute"
version = "0.1.16"
description = "Code related to computations shared between the Depmap Portal and BreadBox"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.1"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
json-logic = "^0.7.0-alpha"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
