[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.9,<3.10"
pandas = "^1.0"
numpy = "^1.0"
taigapy = {version = "^3.7.1", source = "public-python"}
packed-cor-tables = {version = "^0.1.1", source = "public-python"}
tqdm = "^4.67.1"
scipy = "1.12.0"
statsmodels = "^0.14.4"
gcsfs = "^2025.3.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"
