[tool.poetry]
name = "depmap"
version = "0.1.1"
description = "Depmap Legacy Portal"
authors = [
    "Alexandra Coppolino <amourey@broadinstitute.org>",
    "Jessica Cheng <jcheng@broadinstitute.org>",
    "Nayeem Aquib <naquib@broadinstitute.org>",
    "Philip Montgomery <pmontgom@broadinstitute.org>",
    "Randy Creasi <rcreasi@broadinstitute.org>",
    "Sarah Wessel Whitaker <swessel@broadinstitute.org>"
    ]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1"
Werkzeug="^3.1"
#itsdangerous==1.1.0
requests="^2.27.1"
Flask-SQLAlchemy="^3.1"
Flask-WTF="^1.2"
WTForms="^3.0.1"
gunicorn="^20.1.0"
Flask-Assets="^2.1"
cssmin="0.2.0"
jsmin="3.0.1"
libsass="^0.23"
Flask-Login="^0.6"
Flask-Bcrypt="^1.0"
Flask-Caching="^2.3"
Flask-DebugToolbar="^0.14"
pandas="^2.0"
scipy="^1.14"
matplotlib="^3.9"
seaborn="^0.13"
statsmodels="^0.14"
scikit-learn="^1.5"
h5py="^3.12"
Pillow="^11.0"
pyarrow="^18.0"
json-logic="^0.7.0-alpha"

# google-cloud
google-cloud-core="^2.4"
google-cloud-storage="^2.14"
google-cloud-appengine-logging="^1.4"
google-cloud-audit-log="^0.3"
google-cloud-logging="^3.10"
google-cloud-monitoring="^2.21"
google-cloud-trace="^1.13"
google-cloud-error-reporting="^1.10"

# needed for pulling data used in data load
boto3="^1.16.52"

# progress bar
tqdm="^4.63.0"
progress="^1.6"
# Download from bucket
google-auth="^2.0"

# taigapy
taigapy = {version = "3.14.0", source = "public-python"}
flask-hunter-profile={git = "https://github.com/broadinstitute/flask-hunter-profile.git"}
markdown="^3.4"
Flask-Humanize="^0.3.0"

# selenium for post-deploy checks
selenium="^4.1.3"

celery="^5.3"
redis="^4.1.4"

# cansar
oauthlib="^3.2.0"
requests_oauthlib="^1.3.1"

# APIs
flask-restx="^1.3.0"

# adding extension which switches shell to ipython
flask-shell-ipython="^0.5.1"

graphviz="^0.20"

requests-toolbelt="^1.0.0"

MarkupSafe="^3.0"

SQLAlchemy="^2.0"
breadbox-client = {version = "^4.6.0", source = "public-python"}
pypatch-and-run = {version = "^1.0.2", source = "public-python"}

pyyaml="^6.0"

natsort="^8.4.0"
igraph = "^0.10.6"
pandera = "^0.16.1"
pytest = "^7.4.0"
pytest-split = "^0.9"
multidict = "^6.1.0"
html-sanitizer = "^2.3.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
atomicwrites="^1.4.0"
packaging="^24.0"
pluggy="^1.0.0"
factory-boy="^3.3"
pytest-xdist="^3.5"

# Lint and code style
flake8="^7.0"
flake8-blind-except="^0.2.0"
flake8-debugger="^4.1.0"
flake8-docstrings="^1.7.0"
flake8-isort="^6.1"
flake8-quotes="^3.4"
isort="^5.13"
pep8-naming="^0.14"
tqdm="^4.63.0"
# if you change the version of black, also update the version in .pre-commit-config.yaml
black="^24.0"
# sqlalchemy-stubs removed: SQLAlchemy 2.0 includes its own type stubs

# Git workflow
pre-commit=">=3.0.0"

# release-scripts
pyyaml="^6.0"
sqlitedict="^2.1.0"
import-linter = "^1.12.0"
pyright-ratchet = {git = "https://github.com/pgm/pyright-ratchet.git"}


[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
