[tool.poetry]
name = "analysis-pipeline"
version = "0.1.0"
description = "Scripts for running the analysis pipeline"
authors = ["Nayeem Aquib <naquib@broadinsitute.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.2"
pandas = "<2.0.0"
numpy = "<2.0.0"
h5py = "^3.11.0"
pyarrow = "^17.0.0"
pyyaml = "^6.0.2"
boto = "^2.49.0"
statsmodels = "^0.14.2"
pandera = "^0.20.3"
taigapy = {version = "3.8.3", source = "gcp-artifact-registry"}
scipy = "^1.3.1"
sklearn = "0.0"

[[tool.poetry.source]]
name = "gcp-artifact-registry"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
